- EZGCD: special case is handled by CHINREM_GCD
- heuristic for gcd in char 0: 1) EZGCD 2) CHINREM_GCD 3) Prem
- NTL: update to version 5.4.1
- doc/general.doc: description of algorithms updated
- omalloc: areas may overlap: use memmove instead of memcpy
---------------------------------------------------------

Wed Oct 31 18:57:21 CET 2007 Singular-3-0-4-beta
Changes with respect to 3-0-3-2
- more modgen fixes
- Weyl, Exterior, findimAlgebra, nc_algebra do not change the current ring but
  return the new structure
- ncalgebra is now depreciated, use the new command nc_algebra
- libraries changes to use nc_algebra

Fri Nov  2 14:31:22 CET 2007 Singular-3-0-4-beta
more Changes with respect to 3-0-3-2
- use of boost and std::vector can be changed via configure
  (--without-Boost, --with-stdvec)

Tue Nov  6 16:02:29 CET 2007 Singular-3-0-4-beta
more Changes with respect to 3-0-3-2
- new system("SingularLib"): return SINGULAR_PATH after evaluation
- standard.lib:weightKB improved
- highest corner and weights fixed (was wrong in ring with ordering Ws/ws)

Tue Nov 13 18:26:32 CET 2007 Singular-3-0-4-beta
- surfex.lib: find path to surfex via system("Singular"),
              if this fails, try also all directorories in system("SingularLib")
- timer: find clock ticks:
    - try HZ (traditional)
    - try CLK_TCK (POSIX-1)
    - try sysconf(_SC_CLK_TCK) (POSIX-2)
---------------------------------------------------------
Tue Nov 27 12:16:36 CET 2007 Singular-3-0-4-1
Changes with respect to 3-0-4
- dmod.lib: fixes wrt. nc_algebra and documentation
- allow assignments like: def l=1,2,3;

---------------------------------------------------------
Tue Dec 18 14:12:46 MET 2007
Changes with respect to 3-0-4-1
- could not include bits/sigcontext.h and asm/sigcontext.h:
  include signal.h and hope for the best
- glibc 2.6/2.7 does not have a dynamic fstat - use our own from
  Singular/misc.cc: singular_fstat
- fixed LIB/involut.lib: problems with ring change : nc_algebra
